--- a/Practice Summer 2024/Laba_3_2/CMakeLists.txt
+++ b/Practice Summer 2024/Laba_3_2/CMakeLists.txt
@@ -24,6 +24,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         images.qrc
+        dialog.h dialog.cpp dialog.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Laba_3_2 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
